terraform/alb.tf
# resource "aws_lb" "main" {
#   name               = "web-lb-tf"
#   internal           = false
#   load_balancer_type = "application"
#   security_groups    = [aws_security_group.packer.id]
#   subnets            = [aws_subnet.public.id, aws_subnet.foo.id, aws_subnet.bar.id]

#   enable_deletion_protection = false

#   tags = {
#     Environment = "demo"
#   }
# }


# resource "aws_lb_target_group" "main" {
#   name     = "mupando-lb-tg"
#   port     = 80
#   protocol = "HTTP"
#   vpc_id   = aws_vpc.main.id
# }


# # Create a new ALB Target Group attachment
# resource "aws_autoscaling_attachment" "example" {
#   autoscaling_group_name = aws_autoscaling_group.main.id
#   lb_target_group_arn    = aws_lb_target_group.main.arn
# }

# resource "aws_lb_listener" "front_end" {
#   load_balancer_arn = aws_lb.main.arn
#   port              = "80"
#   protocol          = "HTTP"
# #   ssl_policy        = "ELBSecurityPolicy-2016-08"
# #   certificate_arn   = "arn:aws:iam::187416307283:server-certificate/test_cert_rab3wuqwgja25ct3n4jdj2tzu4"

#   default_action {
#     type             = "forward"
#     target_group_arn = aws_lb_target_group.main.arn
#   }
# }
